--- a/courseraCapstone.ipynb
+++ b/courseraCapstone.ipynb
@@ -9,17 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,8 +21,364 @@
     }
    ],
    "source": [
-    "print(\"Hello Capstone Project Course!\")\n"
+    "print(\"Hello Capstone Project Course!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries imported.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np # library to handle data in a vectorized manner\n",
+    "\n",
+    "import pandas as pd # library for data analsysis\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "\n",
+    "import json # library to handle JSON files\n",
+    "\n",
+    "#!conda install -c conda-forge geopy --yes # uncomment this line if you haven't completed the Foursquare API lab\n",
+    "from geopy.geocoders import Nominatim # convert an address into latitude and longitude values\n",
+    "\n",
+    "import requests # library to handle requests\n",
+    "from pandas.io.json import json_normalize # tranform JSON file into a pandas dataframe\n",
+    "\n",
+    "# Matplotlib and associated plotting modules\n",
+    "import matplotlib.cm as cm\n",
+    "import matplotlib.colors as colors\n",
+    "\n",
+    "# import k-means from clustering stage\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "#!conda install -c conda-forge folium=0.5.0 --yes # uncomment this line if you haven't completed the Foursquare API lab\n",
+    "import folium # map rendering library\n",
+    "\n",
+    "print('Libraries imported.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M\"\n",
+    "\n",
+    "r = requests.get(url).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(r, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save table from soup in a variable\n",
+    "data = soup.table\n",
+    "\n",
+    "# Create empty list\n",
+    "listOfEvt = []\n",
+    "\n",
+    "# Loop all 'tr' elements and add all 'td elements to list'\n",
+    "for tr in data.find_all('tr'):\n",
+    "    for td in tr.find_all('td'):\n",
+    "        listOfEvt.append(td.text.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Table is postcode, borough, neighbourhood but assignment is as follows\n",
+    "column_names = ['Postalcode', 'Neighbourhood', 'Borough'] \n",
+    "\n",
+    "# Instantiate the dataframe\n",
+    "neighborhoods = pd.DataFrame(columns=column_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run through the list of everything, incrementing by 3 each loop.\n",
+    "for i in range(0,len(listOfEvt),3):    \n",
+    "    \n",
+    "    # Set variables\n",
+    "    postcode = listOfEvt[i]\n",
+    "    neighborhood_name = listOfEvt[i+2]\n",
+    "    borough = listOfEvt[i+1]\n",
+    "    \n",
+    "    # Make sure borough is not 'not assigned'\n",
+    "    if(borough == 'Not assigned'):\n",
+    "        a = 1\n",
+    "    else:\n",
+    "        # Make sure neighborhood is not 'not assigned'\n",
+    "        if(neighborhood_name == 'Not assigned'):\n",
+    "            neighborhood_name = borough\n",
+    "        \n",
+    "        # add to dataframe\n",
+    "        neighborhoods = neighborhoods.append({'Borough': borough,\n",
+    "                                          'Neighbourhood': neighborhood_name,\n",
+    "                                          'Postalcode': postcode}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postalcode</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "      <th>Borough</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Rouge</td>\n",
+       "      <td>Scarborough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Malvern</td>\n",
+       "      <td>Scarborough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Port Union</td>\n",
+       "      <td>Scarborough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Rouge Hill</td>\n",
+       "      <td>Scarborough</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Highland Creek</td>\n",
+       "      <td>Scarborough</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postalcode   Neighbourhood      Borough\n",
+       "0        M1B           Rouge  Scarborough\n",
+       "1        M1B         Malvern  Scarborough\n",
+       "2        M1C      Port Union  Scarborough\n",
+       "3        M1C      Rouge Hill  Scarborough\n",
+       "4        M1C  Highland Creek  Scarborough"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort by postal code\n",
+    "neighborhoods.sort_values(['Postalcode'], inplace=True)\n",
+    "neighborhoods = neighborhoods.reset_index()\n",
+    "neighborhoods.drop(['index'], axis=1, inplace=True)\n",
+    "neighborhoods.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postalcode</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>M1B</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M1C</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Port Union, Rouge Hill, Highland Creek</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M1E</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M1G</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Woburn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M1H</td>\n",
+       "      <td>Scarborough</td>\n",
+       "      <td>Cedarbrae</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Postalcode      Borough                           Neighbourhood\n",
+       "0        M1B  Scarborough                          Rouge, Malvern\n",
+       "1        M1C  Scarborough  Port Union, Rouge Hill, Highland Creek\n",
+       "2        M1E  Scarborough       Guildwood, Morningside, West Hill\n",
+       "3        M1G  Scarborough                                  Woburn\n",
+       "4        M1H  Scarborough                               Cedarbrae"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Categorize dataframe by postalcode\n",
+    "df = neighborhoods.groupby(['Postalcode', 'Borough'])['Neighbourhood'].apply(', '.join).reset_index()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shape of Dataframe\n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
